
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (095) 787-6090

********************************************************************************

  January, 18 2017, 19:40
  deviceServiceVersion = 1013348
	
  [-] Fixed error "Socket closed"
  
********************************************************************************

  January, 17 2017, 19:00
  deviceServiceVersion = 1013347
	
  [-] Fixed error with printNormal and printRecMessage
  
********************************************************************************

  January, 13 2017, 19:00
  deviceServiceVersion = 1013345
	
  [-] Fixed error with voided receipt
  
********************************************************************************

  January, 12 2017, 21:45
  deviceServiceVersion = 1013344
	
  [-] Added communication status report to standard Z report
  
********************************************************************************

  January, 11 2017, 20:30
  deviceServiceVersion = 1013340
	
  [-] Fixed error with Socket port sharing
  
********************************************************************************

  January, 11 2017, 16:30
  deviceServiceVersion = 1013339
	
  [+] Added nonfiscal document header printing
  
********************************************************************************

  January, 9 2017, 20:30
  deviceServiceVersion = 1013338
	
  [+] Added exception when tags writed when receipt is closed
  
********************************************************************************

  January, 9 2017, 20:15
  deviceServiceVersion = 1013337
	
  [+] Added document header printing in Nonfiscal document
  
********************************************************************************

  December, 26 2016, 14:23
  deviceServiceVersion = 1013331
	
  [-] Added parameter readDiscountMode 
  