@@ -365,6 +365,10 @@ public class DirectIOHandler {
             case SmFptrConst.SMFPTR_DIO_PRINT_JOURNAL:
                 new DIOPrintJournal(service).execute(data, object);
                 break;
+                
+            case SmFptrConst.SMFPTR_DIO_SET_DISCOUNT_AMOUNT:
+                new DIOSetDiscountAmount(service).execute(data, object);
+                break;
                     
             default:
                 throw new JposException(JposConst.JPOS_E_ILLEGAL,
